Revise web project

--- a/y/index.html
+++ b/y/index.html
@@ -642,37 +642,26 @@
   <div class="projects">
     <h1>Website design Example </h1>
     <br />
+    
+    <div>
+      <p>Shopping Application</p>
+      <a href="https://github.com/panterpee/Shopping-App-React.git">GIT: https://github.com/panterpee/Shopping-App-React.git</a>
+      <img src="./src/shopping-1.PNG" alt="Shopping-app" class="slideanim" style="object-fit: contain; width: 90%; max-height: 65vh"/>
+      <img src="./src/shopping-2.PNG" alt="Shopping-app" class="slideanim" style="object-fit: contain; width: 90%; max-height: 65vh"/>
+      
+    </div>
+    <hr />
+
     <div>
       <p>News website</p>
       <a href="https://github.com/panterpee/News-website.git">GIT: https://github.com/panterpee/News-website.git</a>
-      <img src="./src/news-1.png" alt="news-1" style="object-fit: contain; width: 90%; max-height: 66vh;"
+      <img src="./src/news-1.png" alt="news-1" style="object-fit: contain; width: 90%; max-height: 70vh;"
         class="slideanim" /><br />
       <img src="./src/news-2.png" alt="news-2" class="slideanim" />
       <img src="./src/news-3.png" alt="news-3" class="slideanim" />
     </div>
     <hr />
-    <div>
-      <p>Products website</p>
-      <img src="./src/products-1.png" alt="products-1" style="object-fit: contain; width: 90%; max-height: 40vh"
-        class="slideanim" /><br />
-      <img src="./src/products-2.png" alt="products-2" class="slideanim" />
-      <img src="./src/products-3.png" alt="products-3" class="slideanim" />
-    </div>
-    <hr />
-    <div>
-      <p>Shopping Application</p>
-      <a href="https://github.com/panterpee/shopping-app.git">GIT: https://github.com/panterpee/shopping-app.git</a>
-      <img src="./src/shopping.PNG" alt="Shopping-app" class="slideanim" style="max-width: 950px;"/>
 
-    </div>
-    <hr />
-    <div>
-      <p>Search Blogs</p>
-      <a href="https://github.com/panterpee/Search-blogs.git">GIT: https://github.com/panterpee/Search-blogs.git</a>
-      <img src="./src/search-blogs.PNG" alt="Search-blogs" class="slideanim" />
-
-    </div>
-    <hr />
     <div>
       <p>Pokemon website</p>
       <a href="https://github.com/panterpee/pokemon-detail.git">GIT: https://github.com/panterpee/pokemon-detail.git</a>
