add new project

--- a/y/index.html
+++ b/y/index.html
@@ -255,7 +255,7 @@
     }
 
     .projects img {
-      max-height: 60vh;
+      max-height: 65vh;
       width: auto;
       padding: 10px;
       transition: 0.5s ease;
@@ -646,8 +646,8 @@
     <div>
       <p>Shopping Application</p>
       <a href="https://github.com/panterpee/Shopping-App-React.git">GIT: https://github.com/panterpee/Shopping-App-React.git</a>
-      <img src="./src/shopping-1.PNG" alt="Shopping-app" class="slideanim" style="object-fit: contain; width: 90%; max-height: 65vh"/>
-      <img src="./src/shopping-2.PNG" alt="Shopping-app" class="slideanim" style="object-fit: contain; width: 90%; max-height: 65vh"/>
+      <img src="./src/shopping-1.PNG" alt="Shopping-app" class="slideanim" style="object-fit: contain; width: 90%; max-height: 66vh"/>
+      <img src="./src/shopping-2.PNG" alt="Shopping-app" class="slideanim" style="object-fit: contain; width: 90%; max-height: 61.5vh"/>
       
     </div>
     <hr />
@@ -655,7 +655,7 @@
     <div>
       <p>News website</p>
       <a href="https://github.com/panterpee/News-website.git">GIT: https://github.com/panterpee/News-website.git</a>
-      <img src="./src/news-1.png" alt="news-1" style="object-fit: contain; width: 90%; max-height: 70vh;"
+      <img src="./src/news-1.png" alt="news-1" style="object-fit: contain; width: 90%; max-height: 72vh;"
         class="slideanim" /><br />
       <img src="./src/news-2.png" alt="news-2" class="slideanim" />
       <img src="./src/news-3.png" alt="news-3" class="slideanim" />
@@ -663,11 +663,19 @@
     <hr />
 
     <div>
+      <p>Popular Countries website</p>
+      <a href="https://github.com/panterpee/News-website.git">GIT: https://github.com/panterpee/News-website.git</a>
+      <img src="./src/country-thai.JPG" alt="news-1" style="object-fit: contain; width: 90%; max-height: 70vh;" class="slideanim" />
+      <img src="./src/country-japan.JPG" alt="news-1" style="object-fit: contain; width: 90%; max-height: 70vh;" class="slideanim" /><br />
+    </div>
+    <hr />
+
+    <div>
       <p>Pokemon website</p>
       <a href="https://github.com/panterpee/pokemon-detail.git">GIT: https://github.com/panterpee/pokemon-detail.git</a>
-      <img src="./src/poke-1.png" alt="poke-1" style="object-fit: contain; width: 90%; max-height: 45vh"
+      <img src="./src/poke-1.png" alt="poke-1" style="object-fit: contain; width: 90%; max-height: 50vh"
         class="slideanim" /><br />
-      <img src="./src/poke-2.png" alt="poke-2" style="object-fit: contain; width: 90%; max-height: 46.5vh"
+      <img src="./src/poke-2.png" alt="poke-2" style="object-fit: contain; width: 90%; max-height: 51.4vh"
         class="slideanim" />
     </div>
     <hr />
