del product design

--- a/y/index.html
+++ b/y/index.html
@@ -679,7 +679,7 @@
         class="slideanim" />
     </div>
     <hr />
-    <div>
+    <!-- <div>
       <p>Fullstack Login with authentication</p>
       <a href="https://github.com/panterpee/Fullstack-Login.git">GIT: https://github.com/panterpee/Fullstack-Login.git</a> 
       <img src="./src/login-1.png" alt="login-1" style="object-fit: contain; width: 90%; max-height: 45vh"
@@ -687,14 +687,23 @@
       <img src="./src/login-2.png" alt="login-2" style="object-fit: contain; width: 70%; max-height: 45vh"
         class="slideanim" />
     </div>
+    <hr /> -->
+    <div>
+      <p>Install and Service data dashboard (fullstack)</p>
+      <a href="https://github.com/panterpee/service-data-dashboard.git">GIT: https://github.com/panterpee/service-data-dashboard.git</a> 
+      <img src="./src/Service_form.png" alt="service-1" style="object-fit: contain; width: 90%; max-height: 45vh"
+        class="slideanim" />
+      <img src="./src/Service_data.png" alt="service-2" style="object-fit: contain; width: 90%; max-height: 45vh"
+        class="slideanim" />
+    </div>
     <hr />
-    <h1>Products design example</h1>
-    <br>
-    <div class="products-container">
+    <!-- <h1>Products design example</h1>
+    <br> -->
+    <!-- <div class="products-container">
       <img src="./src/VM_02.png" alt="vending mc" class="slideanim">
       <img src="./src/mini-ro.png" alt="mini-ro" class="slideanim">
       <img src="./src/Shower_filter.png" alt="shower-filter" class="slideanim">
-    </div>
+    </div> -->
   </div>
   <footer>
     <h4>Contact: 086-315-7033</h4>
