--- a/y/index.html
+++ b/y/index.html
@@ -646,8 +646,8 @@
     <div>
       <p>Shopping Application</p>
       <a href="https://github.com/panterpee/Shopping-App-React.git">GIT: https://github.com/panterpee/Shopping-App-React.git</a>
-      <img src="./src/shopping-1.PNG" alt="Shopping-app" class="slideanim" style="object-fit: contain; width: 90%; max-height: 66vh"/>
-      <img src="./src/shopping-2.PNG" alt="Shopping-app" class="slideanim" style="object-fit: contain; width: 90%; max-height: 61.5vh"/>
+      <img src="./src/shopping-1.PNG" alt="Shopping-app" class="slideanim" style="object-fit: contain; width: 90%; max-height: 61vh"/>
+      <img src="./src/shopping-2.PNG" alt="Shopping-app" class="slideanim" style="object-fit: contain; width: 90%; max-height: 56.5vh"/>
       
     </div>
     <hr />
@@ -655,30 +655,31 @@
     <div>
       <p>News website</p>
       <a href="https://github.com/panterpee/News-website.git">GIT: https://github.com/panterpee/News-website.git</a>
-      <img src="./src/news-1.png" alt="news-1" style="object-fit: contain; width: 90%; max-height: 72vh;"
+      <img src="./src/news-1.png" alt="news-1" style="object-fit: contain; width: 90%; max-height: 70vh;"
         class="slideanim" /><br />
       <img src="./src/news-2.png" alt="news-2" class="slideanim" />
       <img src="./src/news-3.png" alt="news-3" class="slideanim" />
     </div>
     <hr />
 
-    <div>
+    <!-- <div>
       <p>Popular Countries website</p>
       <a href="https://github.com/panterpee/popular-countries.git">GIT: https://github.com/panterpee/popular-countries.git</a>
       <img src="./src/country-thai.JPG" alt="news-1" style="object-fit: contain; width: 90%; max-height: 70vh;" class="slideanim" />
       <img src="./src/country-japan.JPG" alt="news-1" style="object-fit: contain; width: 90%; max-height: 70vh;" class="slideanim" /><br />
     </div>
-    <hr />
+    <hr /> -->
 
-    <div>
+    <!-- <div>
       <p>Pokemon website</p>
       <a href="https://github.com/panterpee/pokemon-detail.git">GIT: https://github.com/panterpee/pokemon-detail.git</a>
-      <img src="./src/poke-1.png" alt="poke-1" style="object-fit: contain; width: 90%; max-height: 50vh"
+      <img src="./src/poke-1.png" alt="poke-1" style="object-fit: contain; width: 90%; max-height: 45vh"
         class="slideanim" /><br />
-      <img src="./src/poke-2.png" alt="poke-2" style="object-fit: contain; width: 90%; max-height: 51.4vh"
+      <img src="./src/poke-2.png" alt="poke-2" style="object-fit: contain; width: 90%; max-height: 46.4vh"
         class="slideanim" />
     </div>
-    <hr />
+    <hr /> -->
+
     <!-- <div>
       <p>Fullstack Login with authentication</p>
       <a href="https://github.com/panterpee/Fullstack-Login.git">GIT: https://github.com/panterpee/Fullstack-Login.git</a> 
@@ -691,9 +692,9 @@
     <div>
       <p>Install and Service data dashboard (fullstack)</p>
       <a href="https://github.com/panterpee/service-data-dashboard.git">GIT: https://github.com/panterpee/service-data-dashboard.git</a> 
-      <img src="./src/Service_form.png" alt="service-1" style="object-fit: contain; width: 90%; max-height: 45vh"
+      <img src="./src/Service_form.png" alt="service-1" style="object-fit: contain; width: 90%; max-height: 50vh"
         class="slideanim" />
-      <img src="./src/Service_data.png" alt="service-2" style="object-fit: contain; width: 90%; max-height: 45vh"
+      <img src="./src/Service_data.png" alt="service-2" style="object-fit: contain; width: 90%; max-height: 50vh"
         class="slideanim" />
     </div>
     <hr />
